# terrible-mdns-responder

./: README.md  meson.build  meson_options.txt  terrible-mdns-responder  terrible-mdns-responder.in  terrible-mdns-responder.service.in
src/: announce.c  main.c  meson.build  parse.c  terrible-mdns.h
